@@ -38,6 +38,9 @@
 <p>2017-07-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pcl.c (WritePCLImage): Fix null pointer dereference in
+PCL writer when writing monochrome images.  Problem was reported
+by LCatro via email on July 18.</li>
 <li>magick/pixel_cache.c (PersistCache): Fix memory leak while
 writing a MPC file.  Problem was reported by LCatro via email on
 July 18.</li>
